TEST_PROGRAMS/INVALID/15/anonymous.go
package m

type p struct {
	F func()
}
